--- a/ProyectoFinalKermesse/Views/ArqueoCajas/Edit.cshtml
+++ b/ProyectoFinalKermesse/Views/ArqueoCajas/Edit.cshtml
@@ -41,7 +41,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.fechaArqueo, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.fechaArqueo, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.EditorFor(model => model.fechaArqueo, new { htmlAttributes = new { @class = "form-control", @Value=ViewBag.FArqueo } })
             @Html.ValidationMessageFor(model => model.fechaArqueo, "", new { @class = "text-danger" })
         </div>
     </div>
@@ -54,53 +54,18 @@
         </div>
     </div>
 
-    <div class="form-group">
-        @Html.LabelFor(model => model.usuarioCreacion, "usuarioCreacion", htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.DropDownList("usuarioCreacion", null, htmlAttributes: new { @class = "form-control" })
-            @Html.ValidationMessageFor(model => model.usuarioCreacion, "", new { @class = "text-danger" })
-        </div>
-    </div>
 
-    <div class="form-group">
-        @Html.LabelFor(model => model.fechaCreacion, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.fechaCreacion, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.fechaCreacion, "", new { @class = "text-danger" })
-        </div>
-    </div>
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    @Html.HiddenFor(model => model.usuarioCreacion)
 
-    <div class="form-group">
-        @Html.LabelFor(model => model.usuarioModificacion, "usuarioModificacion", htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.DropDownList("usuarioModificacion", null, htmlAttributes: new { @class = "form-control" })
-            @Html.ValidationMessageFor(model => model.usuarioModificacion, "", new { @class = "text-danger" })
-        </div>
-    </div>
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    @Html.HiddenFor(model => model.fechaCreacion)
 
-    <div class="form-group">
-        @Html.LabelFor(model => model.fechaModificacion, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.fechaModificacion, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.fechaModificacion, "", new { @class = "text-danger" })
-        </div>
-    </div>
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    @Html.HiddenFor(model => model.usuarioModificacion)
 
-    <div class="form-group">
-        @Html.LabelFor(model => model.usuarioEliminacion, "usuarioEliminacion", htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.DropDownList("usuarioEliminacion", null, htmlAttributes: new { @class = "form-control" })
-            @Html.ValidationMessageFor(model => model.usuarioEliminacion, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
-        @Html.LabelFor(model => model.fechaEliminacion, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.fechaEliminacion, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.fechaEliminacion, "", new { @class = "text-danger" })
-        </div>
-    </div>
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    @Html.HiddenFor(model => model.fechaModificacion)
 
     <button class="btn-primary" style="background-color: #779FA1">
         <span class="glyphicon glyphicon-hand-left" aria-hidden="true" style="float: left; color: #FFFFFF"></span>
