--- a/ProyectoFinalKermesse/Views/IngresoComunidads/Create.cshtml
+++ b/ProyectoFinalKermesse/Views/IngresoComunidads/Create.cshtml
@@ -68,15 +68,15 @@
         </div>
     </div>
 
-    <div class="form-group">
-        @Html.LabelFor(model => model.usuarioCreacion, "Usuario Creacion", htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.DropDownList("usuarioCreacion", null, htmlAttributes: new { @class = "form-control" })
-            @Html.ValidationMessageFor(model => model.usuarioCreacion, "", new { @class = "text-danger" })
-        </div>
-    </div>
+    @*<div class="form-group">
+            @Html.LabelFor(model => model.usuarioCreacion, "Usuario Creacion", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownList("usuarioCreacion", null, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.usuarioCreacion, "", new { @class = "text-danger" })
+            </div>
+        </div>*@
 
-    
+
 
     <button class="btn-primary" style="background-color: #779FA1">
         <span class="glyphicon glyphicon-hand-left" aria-hidden="true" style="float: left; color: #FFFFFF"></span>
