--- a/ProyectoFinalKermesse/Views/IngresoComunidads/Edit.cshtml
+++ b/ProyectoFinalKermesse/Views/IngresoComunidads/Edit.cshtml
@@ -70,13 +70,7 @@
         </div>
     </div>
 
-    <div class="form-group">
-        @Html.LabelFor(model => model.usuarioModificacion, "Usuario Modificacion", htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.DropDownList("usuarioModificacion", null, htmlAttributes: new { @class = "form-control" })
-            @Html.ValidationMessageFor(model => model.usuarioModificacion, "", new { @class = "text-danger" })
-        </div>
-    </div>
+    
 
 
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
@@ -84,6 +78,9 @@
 
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     @Html.HiddenFor(model => model.fechaCreacion)
+
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    @Html.HiddenFor(model => model.usuarioModificacion)
 
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     @Html.HiddenFor(model => model.fechaModificacion)
