--- a/ProyectoFinalKermesse/Views/CategoriaProductoes/Index.cshtml
+++ b/ProyectoFinalKermesse/Views/CategoriaProductoes/Index.cshtml
@@ -44,7 +44,7 @@
             <span class="caret"></span>
         </button>
         <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-            <li><a href="#">@Html.ActionLink("Exportar a PDF", "VerReporteCatProd", new { tipo = "PDF" , valorBusq = Request.Form["ValorBusq"] })</a></li>
+            <li><a href="#">@Html.ActionLink("Exportar a PDF", "VerReporteCatProd", new { tipo = "PDF", valorBusq = Request.Form["ValorBusq"] })</a></li>
             <li><a href="#">@Html.ActionLink("Exportar a Excel", "VerReporteCatProd", new { tipo = "Excel", valorBusq = Request.Form["ValorBusq"] })</a></li>
             <li><a href="#">@Html.ActionLink("Exportar a Word", "VerReporteCatProd", new { tipo = "Word", valorBusq = Request.Form["ValorBusq"] })</a></li>
 
@@ -77,27 +77,32 @@
                 @*<td>
                         @Html.DisplayFor(modelItem => item.estado)
                     </td>*@
-            <td>
-                @Html.ActionLink("Editar", "Edit", new { id = item.idCatProd }, new { @style = "color: #779FA1" })
-                <span class="glyphicon glyphicon-edit" aria-hidden="true" style="float: left; color: #779FA1"></span>|
-                <span class="glyphicon glyphicon-list-alt" aria-hidden="true" style="color: #779FA1"></span>
-                @Html.ActionLink("Detalles", "Details", new { id = item.idCatProd }, new { @style = "color: #779FA1" }) |
-                <span class="glyphicon glyphicon-trash" aria-hidden="true" style="color: #779FA1"></span>
-                @Html.ActionLink("Eliminar", "Delete", new { id = item.idCatProd }, new { @style = "color: #779FA1" })|
-                <span class="glyphicon glyphicon-file" aria-hidden="true" style="color: #779FA1"></span>
-                @Html.ActionLink("Ver Reporte", "VerReporteCatProdDetalle", new { id = item.idCatProd }, new { @style = "color: #779FA1" })
-            </td>
+                <td>
+                    @if (ViewBag.Rol == "Administrador" || ViewBag.Rol == "Vendedor")
+                    {
+                        @Html.ActionLink("Editar", "Edit", new { id = item.idCatProd }, new { @style = "color: #779FA1" })
+                        <span class="glyphicon glyphicon-edit" aria-hidden="true" style="float: left; color: #779FA1"></span>
+                        <span class="glyphicon glyphicon-list-alt" aria-hidden="true" style="color: #779FA1"></span>
+                        @Html.ActionLink("Detalles", "Details", new { id = item.idCatProd }, new { @style = "color: #779FA1" })
+                        <span class="glyphicon glyphicon-trash" aria-hidden="true" style="color: #779FA1"></span>
+                        @Html.ActionLink("Eliminar", "Delete", new { id = item.idCatProd }, new { @style = "color: #779FA1" })
+                    }
+                    <span class="glyphicon glyphicon-file" aria-hidden="true" style="color: #779FA1"></span>
+                    @Html.ActionLink("Ver Reporte", "VerReporteCatProdDetalle", new { id = item.idCatProd }, new { @style = "color: #779FA1" })
+                </td>
             </tr>
         }
 
     </table>
 
     <hr />
-
-    <p>
-        <button type="button" class="btn-lg" style="border-block-color: #779FA1; background-color: #779FA1">
-            @Html.ActionLink("Agregar nuevo", "Create", "CategoriaProductoes", new { @style = "color:white;" })
-            <span class="glyphicon glyphicon-plus" aria-hidden="true" style="float: left;  color: white"></span>
-        </button>
-    </p>
-</div> 
+    @if (ViewBag.Rol == "Administrador" || ViewBag.Rol == "Vendedor")
+    {
+        <p>
+            <button type="button" class="btn-lg" style="border-block-color: #779FA1; background-color: #779FA1">
+                @Html.ActionLink("Agregar nuevo", "Create", "CategoriaProductoes", new { @style = "color:white;" })
+                <span class="glyphicon glyphicon-plus" aria-hidden="true" style="float: left;  color: white"></span>
+            </button>
+        </p>
+    }
+    </div> 
