--- a/ProyectoFinalKermesse/Views/Comunidads/Index.cshtml
+++ b/ProyectoFinalKermesse/Views/Comunidads/Index.cshtml
@@ -28,12 +28,12 @@
     <hr />
     @using (Html.BeginForm())
     {
-<div class="container">
-    <p>
-        Buscar por nombre: @Html.TextBox("valorBusq")
-        <input type="submit" value="Buscar" style="background-color: #779FA1; color: #FFFFFF; font-weight:bold" />
-    </p>
-</div>}
+        <div class="container">
+            <p>
+                Buscar por nombre: @Html.TextBox("valorBusq")
+                <input type="submit" value="Buscar" style="background-color: #779FA1; color: #FFFFFF; font-weight:bold" />
+            </p>
+        </div>}
     <div class="dropdown" style=" left: 1000px">
         <button class="btn btn-default dropdown-toggle" style="background-color: #779FA1; color: #FFFFFF; font-weight:bold" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
             <span class="glyphicon glyphicon-download-alt" aria-hidden="true" style="float: left;  color: white"></span>
@@ -82,27 +82,33 @@
                         @Html.DisplayFor(modelItem => item.estado)
                     </td>*@
 
-
+                
             <td>
-                @Html.ActionLink("Editar", "Edit", new { id = item.idComunidad }, new { @style = "color: #779FA1" })
-                <span class="glyphicon glyphicon-edit" aria-hidden="true" style="float: left; color: #779FA1"></span>|
-                <span class="glyphicon glyphicon-list-alt" aria-hidden="true" style="color: #779FA1"></span>
-                @Html.ActionLink("Detalles", "Details", new { id = item.idComunidad }, new { @style = "color: #779FA1" }) |
-                <span class="glyphicon glyphicon-trash" aria-hidden="true" style="color: #779FA1"></span>
-                @Html.ActionLink("Eliminar", "Delete", new { id = item.idComunidad }, new { @style = "color: #779FA1" }) |
+                @if (ViewBag.Rol == "Administrador" || ViewBag.Rol == "Párroco")
+                {
+                    @Html.ActionLink("Editar", "Edit", new { id = item.idComunidad }, new { @style = "color: #779FA1" })
+                    <span class="glyphicon glyphicon-edit" aria-hidden="true" style="float: left; color: #779FA1"></span>
+                    <span class="glyphicon glyphicon-list-alt" aria-hidden="true" style="color: #779FA1"></span>
+                    @Html.ActionLink("Detalles", "Details", new { id = item.idComunidad }, new { @style = "color: #779FA1" })
+                    <span class="glyphicon glyphicon-trash" aria-hidden="true" style="color: #779FA1"></span>
+                    @Html.ActionLink("Eliminar", "Delete", new { id = item.idComunidad }, new { @style = "color: #779FA1" })
+                }
+
                 <span class="glyphicon glyphicon-file" aria-hidden="true" style="color: #779FA1"></span>
                 @Html.ActionLink("Ver Reporte", "VerReporteComunidadDetalle", new { id = item.idComunidad }, new { @style = "color: #779FA1" })
             </td>
+                
             </tr>
         }
 
     </table>
-
-    <p>
-        <button type="button" class="btn-lg" style="border-block-color: #779FA1; background-color: #779FA1">
-            @Html.ActionLink("Agregar nuevo", "Create", "Comunidads", new { @style = "color:white;" })
-            <span class="glyphicon glyphicon-plus" aria-hidden="true" style="float: left;  color: white"></span>
-        </button>
-    </p>
-
-</div> 
+    @if (ViewBag.Rol == "Administrador" || ViewBag.Rol == "Párroco")
+    {
+        <p>
+            <button type="button" class="btn-lg" style="border-block-color: #779FA1; background-color: #779FA1">
+                @Html.ActionLink("Agregar nuevo", "Create", "Comunidads", new { @style = "color:white;" })
+                <span class="glyphicon glyphicon-plus" aria-hidden="true" style="float: left;  color: white"></span>
+            </button>
+        </p>
+    }
+    </div> 
