--- a/ProyectoFinalKermesse/Views/ListaPrecioDets/Index.cshtml
+++ b/ProyectoFinalKermesse/Views/ListaPrecioDets/Index.cshtml
@@ -84,13 +84,17 @@
                     @Html.DisplayFor(modelItem => item.Producto1.nombre)
                 </td>
                 <td>
-                    @Html.ActionLink("Editar", "Edit", new { id = item.idListaPrecioDet }, new { @style = "color: #779FA1;" })
-                    <span class="glyphicon glyphicon-edit" aria-hidden="true" style="float: left; color: #779FA1"></span>|
-                    <span class="glyphicon glyphicon-list-alt" aria-hidden="true" style="color: #779FA1"></span>
-                    @Html.ActionLink("Detalles", "Details", new { id = item.idListaPrecioDet }, new { @style = "color: #779FA1;" }) |
-                    <span class="glyphicon glyphicon-trash" aria-hidden="true" style="color: #779FA1"></span>
-                    @Html.ActionLink("Eliminar", "Delete", new { id = item.idListaPrecioDet }, new { @style = "color: #779FA1;" }) |
+                    @if (ViewBag.Rol == "Administrador" || ViewBag.Rol == "Vendedor")
+                    {
+                        @Html.ActionLink("Editar", "Edit", new { id = item.idListaPrecioDet }, new { @style = "color: #779FA1;" })
+                        <span class="glyphicon glyphicon-edit" aria-hidden="true" style="float: left; color: #779FA1"></span>
+                        <span class="glyphicon glyphicon-list-alt" aria-hidden="true" style="color: #779FA1"></span>
+                        @Html.ActionLink("Detalles", "Details", new { id = item.idListaPrecioDet }, new { @style = "color: #779FA1;" })
+                        <span class="glyphicon glyphicon-trash" aria-hidden="true" style="color: #779FA1"></span>
+                        @Html.ActionLink("Eliminar", "Delete", new { id = item.idListaPrecioDet }, new { @style = "color: #779FA1;" })
+                    }
                     <span class="glyphicon glyphicon-file" aria-hidden="true" style="color: #779FA1"></span>
+
                     @Html.ActionLink("Ver Reporte", "VerReporteListaPrecioDetDetalle", new { id = item.idListaPrecioDet }, new { @style = "color: #779FA1;" })
                 </td>
             </tr>
@@ -99,11 +103,13 @@
     </table>
 
     <hr />
-
-    <p>
-        <button type="button" class="btn-lg" style="border-block-color: #779FA1; background-color: #779FA1">
-            @Html.ActionLink("Agregar nuevo", "Create", "ListaPrecioDets", new { @style = "color:white;" })
-            <span class="glyphicon glyphicon-plus" aria-hidden="true" style="float: left;  color: white"></span>
-        </button>
-    </p>
-</div> 
+    @if (ViewBag.Rol == "Administrador" || ViewBag.Rol == "Vendedor")
+    {
+        <p>
+            <button type="button" class="btn-lg" style="border-block-color: #779FA1; background-color: #779FA1">
+                @Html.ActionLink("Agregar nuevo", "Create", "ListaPrecioDets", new { @style = "color:white;" })
+                <span class="glyphicon glyphicon-plus" aria-hidden="true" style="float: left;  color: white"></span>
+            </button>
+        </p>
+    }
+    </div> 
