--- a/ProyectoFinalKermesse/Views/Parroquias/Index.cshtml
+++ b/ProyectoFinalKermesse/Views/Parroquias/Index.cshtml
@@ -100,13 +100,16 @@
                     @Html.DisplayFor(modelItem => item.sitioWeb)
                 </td>
                 <td>
-                    @Html.ActionLink("Editar", "Edit", new { id = item.idParroquia }, new { @style = "color: #779FA1" })
-                    <span class="glyphicon glyphicon-edit" aria-hidden="true" style="float: left; color: #779FA1"></span>|
-                    <span class="glyphicon glyphicon-list-alt" aria-hidden="true" style="color: #779FA1"></span>
-                    @Html.ActionLink("Detalles", "Details", new { id = item.idParroquia }, new { @style = "color: #779FA1" }) |
-                    <span class="glyphicon glyphicon-trash" aria-hidden="true" style="color: #779FA1"></span>
-                    @Html.ActionLink("Eliminar", "Delete", new { id = item.idParroquia }, new { @style = "color: #779FA1" })|
-                    <span class="glyphicon glyphicon-file" aria-hidden="true" style="color: #779FA1"></span>
+                    @if (ViewBag.Rol == "Administrador" || ViewBag.Rol == "Párroco")
+                    {
+                        @Html.ActionLink("Editar", "Edit", new { id = item.idParroquia }, new { @style = "color: #779FA1" })
+                        <span class="glyphicon glyphicon-edit" aria-hidden="true" style="float: left; color: #779FA1"></span>
+                        <span class="glyphicon glyphicon-list-alt" aria-hidden="true" style="color: #779FA1"></span>
+                        @Html.ActionLink("Detalles", "Details", new { id = item.idParroquia }, new { @style = "color: #779FA1" })
+                        <span class="glyphicon glyphicon-trash" aria-hidden="true" style="color: #779FA1"></span>
+                        @Html.ActionLink("Eliminar", "Delete", new { id = item.idParroquia }, new { @style = "color: #779FA1" })
+                        <span class="glyphicon glyphicon-file" aria-hidden="true" style="color: #779FA1"></span>
+                    }
                     @Html.ActionLink("Ver Reporte", "VerReporteParroquiaDetalle", new { id = item.idParroquia }, new { @style = "color: #779FA1" })
                 </td>
             </tr>
@@ -115,11 +118,13 @@
     </table>
 
     <hr />
-    <p>
-        <button type="button" class="btn-lg" style="border-block-color: #779FA1; background-color: #779FA1">
-            @Html.ActionLink("Agregar nuevo", "Create", "CategoriaGastoes", new { @style = "color:white;" })
-            <span class="glyphicon glyphicon-plus" aria-hidden="true" style="float: left;  color: white"></span>
-        </button>
-    </p>
-
-</div> 
+    @if (ViewBag.Rol == "Administrador" || ViewBag.Rol == "Párroco")
+    {
+        <p>
+            <button type="button" class="btn-lg" style="border-block-color: #779FA1; background-color: #779FA1">
+                @Html.ActionLink("Agregar nuevo", "Create", "CategoriaGastoes", new { @style = "color:white;" })
+                <span class="glyphicon glyphicon-plus" aria-hidden="true" style="float: left;  color: white"></span>
+            </button>
+        </p>
+    }
+    </div> 
