--- a/ProyectoFinalKermesse/Views/Productoes/Index.cshtml
+++ b/ProyectoFinalKermesse/Views/Productoes/Index.cshtml
@@ -102,21 +102,23 @@
                     @Html.DisplayFor(modelItem => item.Comunidad1.nombre)
                 </td>
                 <td>
-                    <button class="btn">
-                        <span class="glyphicon glyphicon-edit" aria-hidden="true" style="float: left; color: #779FA1"></span>
-                        @Html.ActionLink("Edit", "Edit", new { id = item.idProducto }, new { @style = "color: #779FA1;" })
-                    </button>
+                    @if (ViewBag.Rol == "Administrador" || ViewBag.Rol == "Vendedor")
+                    {
+                        <button class="btn">
+                            <span class="glyphicon glyphicon-edit" aria-hidden="true" style="float: left; color: #779FA1"></span>
+                            @Html.ActionLink("Edit", "Edit", new { id = item.idProducto }, new { @style = "color: #779FA1;" })
+                        </button>
 
-                    <button class="btn">
-                        <span class="glyphicon glyphicon-list-alt" aria-hidden="true" style="color: #779FA1"></span>
-                        @Html.ActionLink("Details", "Details", new { id = item.idProducto }, new { @style = "color: #779FA1;" })
-                    </button>
+                        <button class="btn">
+                            <span class="glyphicon glyphicon-list-alt" aria-hidden="true" style="color: #779FA1"></span>
+                            @Html.ActionLink("Details", "Details", new { id = item.idProducto }, new { @style = "color: #779FA1;" })
+                        </button>
 
-                    <button class="btn">
-                        <span class="glyphicon glyphicon-trash" aria-hidden="true" style="color: #779FA1"></span>
-                        @Html.ActionLink("Delete", "Delete", new { id = item.idProducto }, new { @style = "color: #779FA1;" })
-                    </button>
-
+                        <button class="btn">
+                            <span class="glyphicon glyphicon-trash" aria-hidden="true" style="color: #779FA1"></span>
+                            @Html.ActionLink("Delete", "Delete", new { id = item.idProducto }, new { @style = "color: #779FA1;" })
+                        </button>
+                    }
                     <button class="btn">
                         <span class="glyphicon glyphicon-file" aria-hidden="true" style="color: #779FA1"></span>
                         @Html.ActionLink("Ver Reporte", "VerReporteProductoDetalle", new { id = item.idProducto }, new { @style = "color: #779FA1;" })
@@ -128,11 +130,13 @@
 
     </table>
     <hr />
-
-    <p>
-        <button type="button" class="btn-lg" style="border-block-color: #779FA1; background-color: #779FA1">
-            @Html.ActionLink("Agregar nuevo", "Create", "Productoes", new { @style = "color:white;" })
-            <span class="glyphicon glyphicon-plus" aria-hidden="true" style="float: left;  color: white"></span>
-        </button>
-    </p>
-</div>
+    @if (ViewBag.Rol == "Administrador" || ViewBag.Rol == "Vendedor")
+    {
+        <p>
+            <button type="button" class="btn-lg" style="border-block-color: #779FA1; background-color: #779FA1">
+                @Html.ActionLink("Agregar nuevo", "Create", "Productoes", new { @style = "color:white;" })
+                <span class="glyphicon glyphicon-plus" aria-hidden="true" style="float: left;  color: white"></span>
+            </button>
+        </p>
+    }
+    </div>
