--- a/ProyectoFinalKermesse/Views/TasaCambioDets/Edit.cshtml
+++ b/ProyectoFinalKermesse/Views/TasaCambioDets/Edit.cshtml
@@ -41,7 +41,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.fecha, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.fecha, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.EditorFor(model => model.fecha, new { htmlAttributes = new { @class = "form-control", @Value = ViewBag.Fecha } })
                     @Html.ValidationMessageFor(model => model.fecha, "", new { @class = "text-danger" })
                 </div>
             </div>
